plus detail info on page about.html

--- a/about.html
+++ b/about.html
@@ -42,9 +42,24 @@
     <div class="main_text">
         <h1>Elyzaveta Trebushna</h1>
         <h2><em>Front-end developer based in Europe </em> </h2>
+        <p class="about_info">
+          I am 24 years old. I am a lawyer. I have a small son, but I believe that a decree is not a sentence. The war made adjustments to our plans. But life goes on, and we must adapt to new conditions.
+          <br>
+          The Go-IT team opened up the world of front-end development for me. Although it was a free marathon, it was very interesting and detailed. Then I continued to study HTML, CSS, JS, React JS, Bootstrap.
+          <br> 
+          I am currently studying on the SheCodes platform. I recommend it to everyone. There is an opportunity to study for free under the program for refugees. 4 full-value courses will expand your knowledge in the field of frontend.
+          <br> Every person always has something to strive for. That's why I keep learning.
+          <br> Nice to meet you!
+        </p>
         <a href="contact.html" class="contact_btn">Contact me</a>
     </div>
-
+        <hr>
+        <div>
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
         <footer>
             <div class="contact_link">
               <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
