--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     </nav>
     <div class="container"> 
     <div class="main_text">
+        <img src="img/face.jpg" alt="" class="myfoto">
         <h1>Elyzaveta Trebushna</h1>
-        <h2><em>Front-end developer based in Europe </em> </h2>
+        <h2><em>Front-end developer based in Ukraine </em> </h2>
         <a href="contact.html" class="contact_btn">Contact me</a>
     </div>
     <div class="projects">
@@ -70,7 +71,7 @@
         </div>
       </div>
     </div>
-    
+    <hr>
     <footer>
       <div class="contact_link">
         <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
