--- a/mywork.html
+++ b/mywork.html
@@ -37,7 +37,7 @@
           </div>
         </div>
     </nav>
-
+    <div class="container">
     <div class="main_text">
         <h1>My work</h1>
         <h2><em>Front-end developer based in Europe </em> </h2>
@@ -68,7 +68,7 @@
         </div>
       </div>
     </div>
-    
+    <hr>
     <footer>
       <div class="contact_link">
         <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
@@ -86,6 +86,7 @@
         <span>Email</span>
       </div>
     </footer>
-  </div>
+ 
+</div>
 </body>
 </html>
