add my certificates

--- a/about.html
+++ b/about.html
@@ -53,13 +53,16 @@
         </p>
         <a href="contact.html" class="contact_btn">Contact me</a>
     </div>
-        <hr>
-        <div>
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
-          <img src="" alt="">
+       
+        <div class="certificates_info">
+         <h2><em> My certificates</em></h2> 
+         <div class="certificates">
+          <img src="img/cert-1.png" alt="" width="350">
+          <img src="img/cert-2.png" alt="" width="350">
+          <img src="img/cert-3.png" alt="" width="350">
         </div>
+        </div>
+        <hr>
         <footer>
             <div class="contact_link">
               <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
