--- a/mywork.html
+++ b/mywork.html
@@ -51,7 +51,7 @@
         
         <div class="project_descr one">
           <h2>Landing page - Resume</h2>
-          <p>This is the project that started my journey in the IT-field. I studied at a free 7-day marathon from the GoIT-company. The mentor talked about all the nuances in great detail. And the final work was a one-page resume site.</p>
+          <p>This is the project that started my way in the IT-field. I studied at a free 7-day marathon from the GoIT-company. The mentor talked about all the nuances in great detail. And the final work was a one-page resume site.</p>
         </div>
       </div>
       <div class="project">
