--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I like to resolve design problems, create smart user interface and imagine useful interaction, developing rich web experiences & web applications.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,7 +11,7 @@
     <script src="https://kit.fontawesome.com/81c8cea245.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
    
-    <title>Portfolio</title>
+    <title>Front-end developer based in Ukraine - L.Trebushna</title>
 </head>
 <body>
   
@@ -43,7 +44,7 @@
 
     <div class="container"> 
     <div class="main_text">
-        <img src="img/face.jpg" alt="" class="myfoto">
+        <img src="img/face.jpg" alt="myfoto" class="myfoto">
         <h1>Elyzaveta Trebushna</h1>
         <h2><em>Front-end developer based in Ukraine </em> </h2>
         <a href="contact.html" class="contact_btn">Contact me</a>
